Added Expansion class and javadocs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
+# General properties
 version=0.0.1
 
+# Database properties
 spring.datasource.url=jdbc:h2:mem:harbingerdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=b1ng3
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
