adding react to index.html (And plugin to pom.xml)

--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
+			<!--  Front-end plugin -->
+			<plugin>
+				<groupId>com.github.eirslett</groupId>
+				<artifactId>frontend-maven-plugin</artifactId>
+			</plugin>
 		</plugins>
 	</build>
 
